Adding readme till now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dark Canvas Console</title>
   <meta name="description" content="Serverless Management Application" />
-  <meta name="author" content="User" />
+  <meta name="author" content="Devlup" />
   <meta property="og:title" content="Dark Canvas Console" />
   <meta property="og:description" content="Serverless Management Application" />
   <meta property="og:type" content="website" />
